test/testdata/classes/missing_property_error.lox
class Foo {}

print Foo.bar; // error: 'Foo class' object has no property 'bar'
